--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,11 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/Starrize/v16
+
+# Directories
+.vs/
+bin/
+bin-int/
+
+# files
+*.user
