--- a/Starrize/Starrize.vcxproj.filters
+++ b/Starrize/Starrize.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Starrize">
+      <UniqueIdentifier>{D97602E1-C543-5DEC-EE5C-4B94DA88927A}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Starrize.h" />
     <ClInclude Include="src\Starrize\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Starrize</Filter>
     </ClInclude>
     <ClInclude Include="src\Starrize\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Starrize.h">
-      <Filter>Header Files</Filter>
+      <Filter>Starrize</Filter>
     </ClInclude>
     <ClInclude Include="src\Starrize\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Starrize</Filter>
     </ClInclude>
     <ClInclude Include="src\Starrize\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Starrize</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Starrize\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Starrize</Filter>
     </ClCompile>
     <ClCompile Include="src\Starrize\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Starrize</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
